Added splash view and added image along with basic styles

--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -1,34 +1,26 @@
-/* 
-    File: media.scss
-    Last Modified:22 April, 2016
-    www.pakvistatech.com
-*/ 
 
-
-
-//================================================================================= 
+//=================================================================================
 //  Color variables
-//================================================================================= 
-$main: rgb(30,53,101);
-$base: #fff;
-$comp: #ca2142;
-$dark: rgba(64,64,64,1);
+//=================================================================================
+$primary: #3498DB;
+$secondary: #C0392B;
+$button: #2ECC71;
+$text: #666;
 
-
-
-//================================================================================= 
+//=================================================================================
 //  Layout variables
-//================================================================================= 
-$rad:20px;
+//=================================================================================
+$rad: 0px;
 
 
 
-//================================================================================= 
+//=================================================================================
 //  Theme overrided classes
-//================================================================================= 
+//=================================================================================
 .btn{
 	@include border-radius($rad);
 }
 .btn-primary{
-    background: $main;
+    background: $button;
+		color: white;
 }
