--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -4,8 +4,14 @@
 
 body
 {
-	background: url(../img/bg.jpg) no-repeat center center fixed;
-	background-size: cover;
+	margin: 0;
+	padding: 0;
+	position: relative;
+	overflow-x: hidden;
+	background: white;
+	top: 0;
+	font-size: 100%;
+	width: 100%;
 }
 
 header{
