Added logo and styles for header

--- a/src/jade/_partials/_splash-layout.jade
+++ b/src/jade/_partials/_splash-layout.jade
@@ -8,7 +8,6 @@ html
 		title Robert Downey Jr
 		+meta
 		+includes()
-	body
+	body.splash
 		block content
-		include _footer.jade
 		include _scripts.jade
