--- a/src/jade/splash.jade
+++ b/src/jade/splash.jade
@@ -2,7 +2,9 @@ extends _partials/_splash-layout.jade
 
 block content
   header.splash__header
-  main.splash
+    div.container.splash__logo
+      img.logo(src="img/logo.png")
+  main.splash__content
     div.splash__wrapper
-      img.splash__image(src="img/splash.jpg", alt="")
+      div.splash__image
     
