--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -2,14 +2,14 @@
 @import "_mixins";
 @import "_variables";
 
+body, html {
+	height: 100%;
+}
 body
 {
 	margin: 0;
 	padding: 0;
-	position: relative;
-	overflow-x: hidden;
 	background: white;
-	top: 0;
 	font-size: 100%;
 	width: 100%;
 }
