--- a/src/sass/layout/_splash.scss
+++ b/src/sass/layout/_splash.scss
@@ -1,8 +1,29 @@
 .splash {
-  &__header {
-    display: block;
-    width: 100%;
-    background-color: black;
-    height: 80px;
-  }
+  background-image: url("../img/splash.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+
+    &__header {
+      display: block;
+      width: 100%;
+      background-color: white;
+      height: 100px;
+    }
+    &__logo {
+      width: 100%;
+      margin: 0 auto;
+      padding: 20px;
+      text-align: center;
+
+      > img {
+        max-width: 100%;
+      }
+    }
+    &__wrapper {
+      width: 100%;
+    }
+    &__image {
+      max-width: 100%;
+    }
 }
