--- a/src/jade/_partials/_includes.jade
+++ b/src/jade/_partials/_includes.jade
@@ -4,7 +4,7 @@ mixin includes()
 
 	// vendor css links
 	link(href="vendor/css/normalize.min.css", rel="stylesheet", type="text/css")
-	link(href="vendor/css/bootstrap.min.css", rel="stylesheet", type="text/css")
+	link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css", rel="stylesheet", type="text/css")
 	link(href="vendor/css/font-awesome.min.css", rel="stylesheet", type="text/css")
 	// uncomment the following if css3 animation is required
 	// link(href="vendor/css/animate.min.css", rel="stylesheet", type="text/css")
