--- a/src/sass/layout/_splash.scss
+++ b/src/sass/layout/_splash.scss
@@ -10,6 +10,7 @@
       background-color: white;
       height: 100px;
     }
+
     &__logo {
       width: 100%;
       margin: 0 auto;
@@ -18,12 +19,86 @@
 
       > img {
         max-width: 100%;
+        margin-top: 1.25em;
       }
     }
-    &__wrapper {
-      width: 100%;
+
+    &__content {
+      top: 50%;
+      margin-top: -275px;
     }
+
     &__image {
       max-width: 100%;
     }
+
+    &__form {
+      max-width: 700px;
+      display: flex;
+      margin: 0 auto;
+      padding: 1.75em;
+      background-color: $primary;
+      -webkit-box-pack: justify;
+      -moz-box-pack: justify;
+      box-pack: justify;
+      -webkit-justify-content: space-between;
+      -moz-justify-content: space-between;
+      -ms-justify-content: space-between;
+      -o-justify-content: space-between;
+      justify-content: space-between;
+      -ms-flex-pack: justify;
+      -webkit-box-lines: multiple;
+      -moz-box-lines: multiple;
+      box-lines: multiple;
+      -webkit-flex-wrap: wrap;
+      -moz-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+      font-size: 2em;
+
+      .email {
+        padding-left: .75em;
+        margin-bottom: 1em;
+        width: 100%;
+        height: 50px;
+      }
+
+      .zip {
+        padding-left: .75em;
+        margin-bottom: 1em;
+        width: 42%;
+        -webkit-flex-basis: 42%;
+        -moz-flex-basis: 42%;
+        flex-basis: 42%;
+        -ms-flex-preferred-size: 42%;
+        height: 50px;
+      }
+
+      @media (max-width:1024px) {
+        max-width: 600px;
+      }
+    }
+
+    &__title {
+      font-size: 2.25em;
+      height: auto;
+      padding-right: .5em;
+      text-align: center;
+      width: 100%;
+      border-radius: 0;
+      padding-top: .75em;
+      margin-bottom: 1.25em;
+      color: white;
+
+      @include onLG {
+        font-size: 3em;
+      }
+    }
+
 }
+
+/*main {
+  @include onLG {
+    display: none;
+  }
+}*/
