--- a/src/sass/layout/_splash.scss
+++ b/src/sass/layout/_splash.scss
@@ -55,35 +55,39 @@
       -ms-flex-wrap: wrap;
       flex-wrap: wrap;
       font-size: 2em;
+      box-shadow: 0px 10px 15px -6px rgba(0,0,0,0.2);
+      animation: lightSpeedIn .8s ease-in-out;
 
       .email {
-        padding-left: .75em;
-        margin-bottom: 1em;
         width: 100%;
-        height: 50px;
       }
 
       .zip {
-        padding-left: .75em;
-        margin-bottom: 1em;
         width: 42%;
         -webkit-flex-basis: 42%;
         -moz-flex-basis: 42%;
         flex-basis: 42%;
         -ms-flex-preferred-size: 42%;
-        height: 50px;
       }
 
       @media (max-width:1024px) {
         max-width: 600px;
       }
+
+      @media(max-width: 306px) {
+        .zip, .btn {
+          flex-basis: 100%;
+          width: 100%;
+        }
+      }
+
     }
 
     &__title {
       font-size: 2.25em;
       height: auto;
       padding-right: .5em;
-      text-align: center;
+      text-align: left;
       width: 100%;
       border-radius: 0;
       padding-top: .75em;
@@ -94,11 +98,4 @@
         font-size: 3em;
       }
     }
-
 }
-
-/*main {
-  @include onLG {
-    display: none;
-  }
-}*/
