Added continue to site link

--- a/src/jade/splash.jade
+++ b/src/jade/splash.jade
@@ -7,9 +7,12 @@ block content
   main.splash__content.col-sm-12.clearix
     div.splash__image
     section.splash__main
+      div.splash__wrapper
         form.splash__form
           h1.splash__title American Needs a Hero
             hr
           input(type="email" name="email" placeholder="email" class="email")
           input(type="text" name="zip" placeholder="zip code" class="zip")
           input(type="submit" class="btn" value="submit" name="submit-btn")
+        p.splash__link
+          a(href="index.html") Continue to Site
