--- a/src/jade/_partials/_header.jade
+++ b/src/jade/_partials/_header.jade
@@ -1,8 +1,13 @@
 block header
-  header.nav
-    nav.nav-bar
-      ul 
-        li
-          a(href="index.html") Home
-        li
-          a(href="splash.html") Splash
+  header.main__header
+    nav.nav-bar.main__nav
+      ul.main__list
+        li.main__list__item
+          a(href="index.html") About RDJ
+        li.main__list__item
+          a(href="splash.html") Issues
+        li.main__list__item
+          a(href="splash.html") Contact
+        li.btn.main__list__item
+          a(href="#") Donate
+        			
