added image and form on home page

--- a/src/jade/_partials/_header.jade
+++ b/src/jade/_partials/_header.jade
@@ -1,5 +1,7 @@
 block header
   header.main__header
+    div.main__logo
+      img.logo(src="img/logo.png")
     nav.nav-bar.main__nav
       ul.main__list
         li.main__list__item
