--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,7 +1,7 @@
 @import "../layout/_media";
 @import "_mixins";
 @import "_variables";
-@import url(//fonts.googleapis.com/css?family=Source+Sans+Pro);
+@import 'https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400';
 
 body, html {
 	font-family: 'Source Sans Pro', sans-serif;
