--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,10 +6,29 @@
   &__header {
     display: block;
     width: 100%;
-    background-color: #C0392B;
+    background-color: white;
     height: 12em;
     position: relative;
     padding: 1em;
+    box-shadow: 1px 1px 2px 2px rgba(0,0,0,.3);
+  }
+
+  &__logo {
+    line-height: 7;
+    padding: 1em;
+    float: left;
+    max-width: 25%;
+    position: relative;
+    left: 2%;
+
+    .logo {
+      max-width: 100%;
+    }
+    @media (max-width: 721px) {
+      float: none;
+      max-width: 100%;
+      text-align: center;
+    }
   }
 
   &__nav {
@@ -25,9 +44,10 @@
       display: inline;
 
       a {
-        padding: 1em;
+        padding: 0 .75em;
         font-size: 1.75em;
-        color: white;
+        color: $text;
+        font-weight: 100;
       }
     }
 
@@ -35,16 +55,91 @@
       margin-left: .5em;
       padding: 1em 1em 1em 0;
       vertical-align: baseline;
+      transition: 200ms ease-in-out;
+
+      &:hover {
+        box-shadow: 2px 2px 3px 3px rgba(0,0,0,.3);
+        border: none;
+      }
 
       a {
         vertical-align: middle;
         padding: 1.45em;
+        color: white;
+
+        &:hover {
+          color: $text;
+        }
       }
     }
   }
-}
 
-h1 {
-  font-family: 'Source Sans Pro';
-  font-weight: bold;
+  &__content {
+    height: 100%;
+  }
+  &__mask {
+    height: 80%;
+    overflow: hidden;
+    width: 100%;
+  }
+  &__bg {
+    background-image: url("../img/main-bg.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+
+    .splash__wrapper {
+      float: left;
+      max-width: 50%;
+      position: absolute;
+      top: 25%;
+      left: 2%;
+
+      form {
+        padding: .75em;
+        opacity: .85;
+      }
+
+      h1 {
+        font-weight: 100;
+        font-size: 1.75em;
+        margin-top: 0;
+        margin-bottom: .25em;
+      }
+
+      .btn.donate {
+        font-size: 1em;
+        line-height: 1.6;
+      }
+    }
+  }
+
+  &__blurb {
+    color: white;
+    font-weight: 100;
+    margin-bottom: 1em;
+  }
+
+  &__list {
+    display: inline-block;
+
+    li {
+      float: left;
+      padding: .25em;
+    }
+
+    .btn {
+      background-color: transparent;
+      border: 1px solid white;
+      font-size: 1.75em;
+
+      &:hover {
+        background-color: white;
+        color: $text;
+      }
+
+    }
+  }
 }
