fixed cta and added for loop in jade file

--- a/src/jade/_partials/_header.jade
+++ b/src/jade/_partials/_header.jade
@@ -10,6 +10,6 @@ block header
           a(href="splash.html") Issues
         li.main__list__item
           a(href="splash.html") Contact
-        li.btn.main__list__item
-          a(href="#") Donate
+        li.btn.main__list__item--cta
+          a.main__cta(href="#") Donate
         			
