Switched names of index and splash pages

--- a/src/jade/_partials/_header.jade
+++ b/src/jade/_partials/_header.jade
@@ -5,11 +5,11 @@ block header
     nav.nav-bar.main__nav
       ul.main__list
         li.main__list__item
-          a(href="index.html") About RDJ
+          a(href="#") About RDJ
         li.main__list__item
-          a(href="splash.html") Issues
+          a(href="#") Issues
         li.main__list__item
-          a(href="splash.html") Contact
+          a(href="#") Contact
         li.btn.main__list__item--cta
           a.main__cta(href="#") Donate
         			
