added blurb under h1 of splash page

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -10,6 +10,7 @@ block content
       div.splash__wrapper
         form.splash__form
           h1.splash__title American Needs a Hero
+          h3.splash__blurb Keep Informed by joining our movement
             hr
           input(type="email" name="email" placeholder="email" class="email")
           input(type="text" name="zip" placeholder="zip code" class="zip")
