validation for form

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -8,12 +8,12 @@ block content
     div.splash__image
     section.splash__main
       div.splash__wrapper
-        form.splash__form
+        form.splash__form(action="https://formspree.io/plopes20587@gmail.com", method="post", onsubmit="return validate()")
           h1.splash__title American Needs a Hero
           h3.splash__blurb Keep Informed by joining our movement
             hr
-          input(type="email" name="email" placeholder="email" class="email")
+          input(type="email" name="_replyto" placeholder="email" class="email")
           input(type="text" name="zip" placeholder="zip code" class="zip")
-          input(type="submit" class="btn" value="submit" name="submit-btn")
+          input(type="submit" class="btn" value="submit")
         p.splash__link
           a(href="main.html") Continue to Site
