added press section

--- a/src/jade/main.jade
+++ b/src/jade/main.jade
@@ -13,4 +13,6 @@ block content
 								li
 									a.btn.currency(href="#")= item															
 						a.btn.donate(href="#") Donate									
-							
+	section.news
+		div.news__main__content
+			h1.news__title In The Press						
