--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -55,6 +55,7 @@
       margin-left: .5em;
       padding: 1em 1em 1em 0;
       transition: 200ms ease-in-out;
+      margin-top: 0;
 
       &:hover {
         box-shadow: 2px 2px 3px 3px rgba(0,0,0,.3);
@@ -70,14 +71,14 @@
   &__cta {
     font-size: 1.45em;
     color: white;
-    line-height: 1.75;
+    line-height: 2.25;
   }
 
   &__content {
-    height: 100%;
+    height: 450px;
   }
   &__mask {
-    height: 80%;
+    height: 100%;
     overflow: hidden;
     width: 100%;
   }
@@ -93,7 +94,7 @@
       float: left;
       max-width: 75%;
       position: absolute;
-      top: 25%;
+      top: 20%;
       left: 2%;
 
       form {
@@ -144,8 +145,18 @@
   }
 }
 
+.news {
+  &__title {
+    text-align: center;
+    font-size: 4.15em;
+  }
+}
+
 @media (max-width: 736px) {
   .main {
+    &__content {
+      height: 50%;
+    }
     &__bg {
       .splash__wrapper {
         width: 100%;
@@ -154,7 +165,11 @@
         padding: 0;
         position: relative;
         left: 0;
+        top: 0;
       }
+    }
+    &__mask {
+      overflow: initial;
     }
   }
 }
