Fixed text in blurb

--- a/src/jade/main.jade
+++ b/src/jade/main.jade
@@ -7,7 +7,7 @@ block content
 				div.splash__wrapper
 					form.splash__form
 						h1.splash__title Contribute Today
-						p.main__blurb Fueled by span YOU. Not partisan special interests.
+						p.main__blurb Fueled by YOU. Not partisan special interests.
 						ul.main__list
 							for item in ["$10", "$50", "$100", "$500"]
 								li
