Added news section

--- a/src/jade/_partials/_footer.jade
+++ b/src/jade/_partials/_footer.jade
@@ -1,6 +1,9 @@
 block footer
-  footer.footer
-    ul
-      li.list
-      li.list
-      li.list
+  footer.footer__content
+    ul.footer__social
+      li.footer__list
+        a(href="#").facebook 
+      li.footer__list
+        a(href="#").facebook 
+      li.footer__list
+        a(href="#").facebook 
