added footer to bottom

--- a/src/jade/_partials/_footer.jade
+++ b/src/jade/_partials/_footer.jade
@@ -1,9 +1,9 @@
 block footer
   footer.footer__content
-    ul.footer__social
-      li.footer__list
-        a(href="#").facebook 
-      li.footer__list
-        a(href="#").facebook 
-      li.footer__list
-        a(href="#").facebook 
+    div.container
+      div.footer__info
+        p.footer__contact 
+          a(href="#") Contact Us
+        p.footer__privacy 
+          a(href="#") Privacy Policy
+        p.footer__copyright ©2016 Robert for America
