--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -234,6 +234,34 @@
   }
 }
 
+.footer {
+
+  &__content {
+  display: block;
+  width: 100%;
+  height: 150px;
+  background-color: $primary;
+}
+
+  &__info {
+    padding: .75em;
+    margin: 0 auto;
+    text-align: center;
+    color: white;
+    font-size: 1.60em;
+    font-weight: 100;
+
+    p {
+      padding-top: 10px;
+      letter-spacing: 3px;
+    }
+
+    a {
+      color: white;
+    }
+  }
+}
+
 @media (max-width: 991px) {
   .news {
     &__feed {
