--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -45,7 +45,7 @@
 
       a {
         padding: 0 .75em;
-        font-size: 1.75em;
+        font-size: 1.45em;
         color: $text;
         font-weight: 100;
       }
@@ -108,10 +108,12 @@
       }
 
       h1 {
-        font-weight: 100;
-        font-size: 1.75em;
+        font-weight: bold;
+        font-size: 2.35em;
         margin-top: 0;
         margin-bottom: .25em;
+        letter-spacing: 2px;
+        padding-bottom: 10px;
       }
 
       .btn.donate {
