added container for header

--- a/src/jade/_partials/_header.jade
+++ b/src/jade/_partials/_header.jade
@@ -1,15 +1,16 @@
 block header
   header.main__header
-    div.main__logo
-      img.logo(src="img/logo.png")
-    nav.nav-bar.main__nav
-      ul.main__list
-        li.main__list__item
-          a(href="#") About RDJ
-        li.main__list__item
-          a(href="#") Issues
-        li.main__list__item
-          a(href="#") Contact
-        li.btn.main__list__item--cta
-          a.main__cta(href="#") Donate
+    div.container
+      div.main__logo
+        img.logo(src="img/logo.png")
+      nav.nav-bar.main__nav
+        ul.main__list
+          li.main__list__item
+            a(href="#") About RDJ
+          li.main__list__item
+            a(href="#") Issues
+          li.main__list__item
+            a(href="#") Contact
+          li.btn.main__list__item--cta
+            a.main__cta(href="#") Donate
         			
