--- a/src/sass/layout/_splash.scss
+++ b/src/sass/layout/_splash.scss
@@ -109,9 +109,10 @@
     }
 
     &__link {
-      font-size: 4em;
+      font-size: 3.75em;
       float: right;
       text-decoration: none;
+      margin-top: .75em;
 
       a {
         color: white;
