added toggle button for mobile

--- a/src/jade/_partials/_header.jade
+++ b/src/jade/_partials/_header.jade
@@ -3,8 +3,10 @@ block header
     div.container
       div.main__logo
         img.logo(src="img/logo.png")
+      a.main__toggle#menu
+        img(src="img/menu.svg")
       nav.nav-bar.main__nav
-        ul.main__list
+        ul.main__list.nav-list#nav-list
           li.main__list__item
             a(href="#") About RDJ
           li.main__list__item
