--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -30,6 +30,18 @@
     }
   }
 
+  &__toggle {
+    display: none;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    right: 0;
+    float: right;
+    margin-right: 20px;
+    top: 2.75em;
+    cursor: pointer;
+  }
+
   &__nav {
     margin: 2em 0;
     float: right;
@@ -65,7 +77,6 @@
         }
       }
     }
-
   }
 
   &__cta {
@@ -289,6 +300,63 @@
       h2, span {
         padding-left: 0;
       }
+    }
+  }
+}
+
+@media (max-width: 721px) {
+  .main {
+    &__header {
+      padding: 0;
+      z-index: 3;
+
+      .container {
+        padding: 0;
+      }
+    }
+
+    &__nav {
+      //display: none;
+      float: none;
+    }
+
+    &__list.nav-list  {
+      background: white;
+      width: 100%;
+      overflow: hidden;
+      display: block;
+      text-align: center;
+      height: 0;
+    }
+
+    .nav-list.open {
+        height: 300px;
+      }
+
+    &__logo {
+      max-width: 50%;
+      float: left;
+    }
+
+    &__toggle {
+      display: block;
+    }
+  }
+
+  .nav-list {
+    li {
+      float: none;
+      display: block;
+
+      a {
+        display: block;
+        padding: 5px;
+      }
+    }
+
+    li.btn {
+      width: 100%;
+      margin: 0;
     }
   }
 }
