committing contribute section for mobile

--- a/src/jade/_partials/_header.jade
+++ b/src/jade/_partials/_header.jade
@@ -2,7 +2,7 @@ block header
   header.main__header
     div.container
       div.main__logo
-        img.logo(src="img/logo.png")
+        img.logo(src="img/Logo.png")
       a.main__toggle#menu
         img(src="img/menu.svg")
       nav.nav-bar.main__nav
